# planning

client/: Cargo.toml  Trunk.toml  index.html  style.scss  tailwind.config.js
client/src/: config_page.rs  main.rs  types.rs
client/src/pages/: calendar.rs  config.rs  edit_timeslot.rs  mod.rs
client/src/pages/calendar/: day.rs  month.rs
client/src/services/: calendar.rs  mod.rs  timeslots.rs
server/: Cargo.toml  timeslots.json
server/data/: timeslots.json
server/src/: main.rs
